--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.1",
     "bulma": "^0.7.5",
+    "sass": "^1.22.9",
     "uglify-js": "^3.6.0"
   }
 }
