--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pug-cli": "^1.0.0-alpha6",
     "sass": "^1.22.9",
     "snyk": "^1.226.0",
+    "svgo": "^1.3.0",
     "uglify-js": "^3.6.0",
     "watch": "^1.0.2"
   }
