--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pug": "^2.0.4",
     "pug-cli": "^1.0.0-alpha6",
     "sass": "^1.22.9",
+    "svgo": "^1.3.0",
     "uglify-js": "^3.6.0",
     "watch": "^1.0.2"
   }
